Neovim configuration, and adding protoncheck package.

--- a/config/kitty/kitty.conf
+++ b/config/kitty/kitty.conf
@@ -217,9 +217,15 @@ map kitty_mod+alt+h show_scrollback
 # Vim modifier maps
 #
 
+map ctrl+tab send_text all \x1b[9;5u
+map ctrl+shift+tab send_text all \x1b[9;6u
+
 map ctrl+enter send_text all \x1b[13;5u
 map shift+enter send_text all \x1b[13;2u
 map ctrl+shift+enter send_text all \x1b[13;6u
+
 map ctrl+backspace send_text all \x1b[127;5u
+map shift+backspace send_text all \x1b[127;2u
+map ctrl+shift+backspace send_text all \x1b[127;6u
 
 # vim:ft=kitty
