--- a/config/swappy/config
+++ b/config/swappy/config
@@ -1,6 +1,6 @@
 [Default]
 save_dir=$HOME/Pictures/Screenshots
-save_filename_format=%Y%m%d-%Hh%Mm%Ss_swappy.png
+save_filename_format=%Y%m%d_%Hh%Mm%Ss_swappy.png
 show_panel=true
 line_size=5
 text_size=16
