Neovim fixes and finalized waybar-preview script.

--- a/config/kitty/kitty.conf
+++ b/config/kitty/kitty.conf
@@ -20,11 +20,14 @@ include ./catppuccin.conf
 cursor_blink_interval 0
 cursor_shape block
 
-font_family InputMonoCondensed
-bold_font InputMonoCondensed Bold
-italic_font InputMonoCondensed Italic
-bold_italic_font InputMonoCondensed BoldIta
+font_family Input Mono Condensed
+bold_font Input Mono Condensed
+italic_font Input Mono Condensed
+bold_italic_font Input Mono Condensed
 font_size 9.0
+
+# Slightly adjusted line height to improve glyp/icon for some fonts
+adjust_line_height 110%
 
 disable_ligatures cursor
 
@@ -62,6 +65,10 @@ linux_display_server wayland
 allow_remote_control yes
 listen_on unix:@mykitty
 
+repaint_delay 6
+input_delay 2
+sync_to_monitor yes
+
 # On Wayland, touch scroll is also used for mice
 wheel_scroll_multiplier 5.0
 touch_scroll_multiplier 5.0
@@ -87,20 +94,11 @@ scrollback_pager bash -c "exec nvim 63<&0 0</dev/null -c 'map <silent> q :qa!<CR
 
 # Config
 
+map f5 load_config_file /etc/nixos/config/kitty/kitty.conf
 map kitty_mod+f1 launch firefox https://sw.kovidgoyal.net/kitty
-map f1 launch firefox https://sw.kovidgoyal.net/kitty
 map kitty_mod+f2 set_tab_title
-map kitty_mod+f5 load_config_file /etc/nixos/config/kitty/kitty.conf
-
-map f2 set_tab_title
-map f5 load_config_file
-map f6 debug_config
-
-map kitty_mod+alt+u kitten unicode_input
-
-# Mouse actions
-
-mouse_map left click ungrabbed mouse_click_url_or_select
+map kitty_mod+f5 load_config_file
+map kitty_mod+f6 debug_config
 
 # Layout management
 
@@ -119,13 +117,6 @@ map kitty_mod+w>kitty_mod+] layout_action increase_num_full_size_windows
 map kitty_mod+w>kitty_mod+[ layout_action decrease_num_full_size_windows
 
 # Window management
-
-# Vim mappings
-map kitty_mod+enter new_window_with_cwd
-map kitty_mod+h neighboring_window left
-map kitty_mod+j neighboring_window bottom
-map kitty_mod+k neighboring_window top
-map kitty_mod+l neighboring_window right
 
 # W prefix key
 map kitty_mod+w>w nth_window -1
@@ -201,6 +192,11 @@ map ctrl+l kitten pass_keys.py neighboring_window right ctrl+l
 
 # Scrolling
 
+map kitty_mod+h scroll_page_up
+map kitty_mod+j scroll_line_down
+map kitty_mod+k scroll_line_up
+map kitty_mod+l scroll_page_down
+
 map kitty_mod+u scroll_page_up
 map kitty_mod+d scroll_page_down
 
@@ -212,6 +208,7 @@ map kitty_mod+down scroll_page_down
 #
 
 map kitty_mod+alt+h show_scrollback
+map kitty_mod+alt+u kitten unicode_input
 
 #
 # Vim modifier maps
