Adding PragmataPro Mono.

--- a/config/kitty/kitty.conf
+++ b/config/kitty/kitty.conf
@@ -17,19 +17,28 @@
 
 include ./catppuccin.conf
 
-cursor_blink_interval 0
-cursor_shape block
+# Input Mono Condensed
+#
+#   font_family Input Mono Condensed
+#   bold_font Input Mono Condensed
+#   italic_font Input Mono Condensed
+#   bold_italic_font Input Mono Condensed
 
-font_family Input Mono Condensed
-bold_font Input Mono Condensed
-italic_font Input Mono Condensed
-bold_italic_font Input Mono Condensed
+# PragmataPro Mono (haven't yet purchased licenses for bold and italic styles)
+font_family PragmataPro Mono Liga
+bold_font PragmataPro Mono Liga
+italic_font PragmataPro Mono Liga
+bold_italic_font PragmataPro Mono Liga
+
 font_size 9.0
 
 # Slightly adjusted line height to improve glyp/icon for some fonts
-adjust_line_height 110%
+adjust_line_height 125%
 
 disable_ligatures cursor
+
+cursor_blink_interval 0
+cursor_shape block
 
 window_padding_width 8 10
 window_border_width 1px
