Adding foot terminal emulator with Catppuccin colors, for trying it out.

--- a/config/kitty/kitty.conf
+++ b/config/kitty/kitty.conf
@@ -17,33 +17,23 @@
 
 include ./catppuccin.conf
 
-# Input Mono Condensed
-#
-#   font_family Input Mono Condensed
-#   bold_font Input Mono Condensed
-#   italic_font Input Mono Condensed
-#   bold_italic_font Input Mono Condensed
-
-# PragmataPro Mono (haven't yet purchased licenses for bold and italic styles)
+# No license for bold and italic yet, trial first
 font_family PragmataPro Mono Liga
-bold_font PragmataPro Mono Liga
-italic_font PragmataPro Mono Liga
-bold_italic_font PragmataPro Mono Liga
-
-font_size 9.0
+font_size 10
 
 # Slightly adjusted line height to improve glyp/icon for some fonts
-adjust_line_height 125%
+adjust_line_height 135%
 
+# Disable ligatures for text currently in cursor
 disable_ligatures cursor
 
 cursor_blink_interval 0
 cursor_shape block
 
-window_padding_width 8 10
-window_border_width 1px
+window_padding_width 10 12
+window_border_width 2px
 
-active_border_color #EBDDAA
+active_border_color #FAE3B0
 inactive_border_color #C3BAC6
 
 background_opacity 0.98
