Fixing foot terminal config.

--- a/config/foot/foot.ini
+++ b/config/foot/foot.ini
@@ -1,51 +1,88 @@
-# -*- conf -*-
-# Foot terminal configuration, based on the defaults and sparsely changed so far.
 #
-# shell=$SHELL (if set, otherwise user's default shell from /etc/passwd)
-# term=foot (or xterm-256color if built with -Dterminfo=disabled)
-# login-shell=no
+# Foot terminal configuration
+#
+# Based on the default config file and sparsely changed.
+#
+
+#
+# ENVIRONMENT
+#
 
 app-id=foot
 title=foot
-locked-title=no
 
-font=PragmataPro Mono Liga:size=11
-line-height=16
-box-drawings-uses-font-glyphs=no
+#
+# FONT AND SPACING
+#
+# Decent line spacing is bigfoot of monospaced fonts, I've only found Input Mono which lets you set
+# height at input.djr.com. PragmataPro is even fully unspaced but as a design choice with reason.
+# But e.g. KDE's cross-platform editor Kate is an amazing one perfect for smaller edits yet still
+# can't set spacing. After 21 years. I still carve my eyes out using it sometimes, worth it.
+#
+# Anyway, love PragmataPro at 180% for general keyboard smashing. 200% for coding. 15" CRTs are
+# gone. Juniors, janitors, pets, all get curved 50" 8K monitors. Just also 20 y/o linter rules
+# sadly. :P Hard wraps at 80? To... fit 8 buffers side-by-side? Not cool. Readability is cool!
+#
+# And every OS has workspaces/virtual spaces, I have 10 here right now. Just lint for consistency 
+# and to catch mistakes: speed things up rather than slow them down.
+
+font=PragmataPro Mono Liga:size=10
+line-height=18px
 pad=18x14
 
-[scrollback]
-lines=10000
+#
+# TEXT CURSOR LOOK
+#
 
 [cursor]
 style=block
 color=1E1E2E D9E0EE
 
-[mouse]
-hide-when-typing=no
+# 
+# SCROLLBACK
+#
+# Not sure default is enough for certain build stack traces for example, so let's up it a bit..
+#
+
+[scrollback]
+lines=10000
+
+#
+# COLORS
+#
+# Palette Catppuccin from a port recently posted in one of its GitHub issues (not yet official).
+# 
+# See:
+# - https://github.com/catppuccin/catppuccin/issues/24
+# - https://github.com/catppuccin
+#
 
 [colors]
-alpha=0.98
+
+# Transparency: usually at 0.98 or simply opaque, but here we needed extra oompf
+alpha=0.95
+
+# General/common colors (text and background)
 foreground=D9E0EE
 background=1E1E2E
 
-## Normal/regular colors (color palette 0-7)
-regular0=6E6C7C  # black
-regular1=E28C8C  # red
-regular2=B3E1A3  # green
-regular3=EADDA0  # yellow
-regular4=A4B9EF  # blue
-regular5=C6AAE8  # magenta
-regular6=F0AFE1  # cyan
-regular7=D7DAE0  # white
+# Normal/regular colors (color palette 0-7)
+regular0=6E6C7C # Black
+regular1=E28C8C # Red
+regular2=B3E1A3 # Green
+regular3=EADDA0 # Yellow
+regular4=A4B9EF # Blue
+regular5=C6AAE8 # Magenta
+regular6=F0AFE1 # Cyan
+regular7=D7DAE0 # White
 
-## Bright colors (color palette 8-15)
-bright0=6E6C7C   # bright black
-bright1=E28C8C   # bright red
-bright2=B3E1A3   # bright green
-bright3=EADDA0   # bright yellow
-bright4=A4B9EF   # bright blue
-bright5=C6AAE8   # bright magenta
-bright6=F0AFE1   # bright cyan
-bright7=D7DAE0   # bright white
+# Bright colors (color palette 8-15)
+bright0=6E6C7C # Bright Black
+bright1=E28C8C # Bright Red
+bright2=B3E1A3 # Bright Green
+bright3=EADDA0 # Bright Yellow
+bright4=A4B9EF # Bright Blue
+bright5=C6AAE8 # Bright Magenta
+bright6=F0AFE1 # Bright Cyan
+bright7=D7DAE0 # Bright White
 
