Some Sway and Vifm config.

--- a/config/sway/config
+++ b/config/sway/config
@@ -479,7 +479,7 @@ for_window {
   #
 
   # Scratchpad
-  [app_id="scratchterm"] resize set 1790 940, move scratchpad
+  [app_id="scratchterm"] move scratchpad, resize set 1790 940
   [app_id="scratchterm" con_mark="__fullscreen__"] fullscreen enable
 
   # Popups (e.g. when clicking items in bar)
