--- a/config/waybar/config
+++ b/config/waybar/config
@@ -87,6 +87,7 @@
     "format": "<span font='12'></span>",
     "tooltip": false,
     "on-click": "dolphin",
+    "on-click-middle": "kitty --class popupterm -e zsh -c vifm",
     "on-click-right": "nautilus"
   },
   "custom/editor": {
