Fixing qt5ct for styling.

--- a/config/sway/config
+++ b/config/sway/config
@@ -533,7 +533,7 @@ exec_always pkill swayrd ; env RUST_BACKTRACE=1 swayrd > /tmp/swayrd.log 2>&1
 exec_always pkill -f sway-dim-inactive-windows ; sway-dim-inactive-windows --opacity 0.9 > /tmp/sway-dim-inactive-windows.log 2>&1
 
 # Start monitor temperature daemon
-exec_always pkill wlsunset ; wlsunset -t 4500 -T 6500 -l 62.39 -L 17.30 > /tmp/wlsunset.log 2>&1
+exec_always sleep 3 ; pkill wlsunset ; wlsunset -t 4500 -T 6500 -l 62.39 -L 17.30 > /tmp/wlsunset.log 2>&1
 
 # Start network manager tray application
 exec_always pkill nm-tray ; nm-tray
