Sway switches workspace when moving window to another, and qt5ct config added for future use.

--- a/config/kitty/kitty.conf
+++ b/config/kitty/kitty.conf
@@ -17,8 +17,11 @@
 
 include ./catppuccin.conf
 
-# No license for bold and italic yet, trial first
+# No license for bold and italic yet
 font_family PragmataPro Mono Liga
+bold_font PragmataPro Mono Liga Bold
+italic_font PragmataPro Mono Liga Italic
+bold_italic_font PragmataPro Mono Liga Bold Italic
 font_size 10
 
 # Slightly adjusted line height to improve glyp/icon for some fonts
@@ -33,7 +36,7 @@ cursor_shape block
 window_padding_width 10 12
 window_border_width 2px
 
-active_border_color #FAE3B0
+active_border_color #F8BD96
 inactive_border_color #C3BAC6
 
 background_opacity 0.98
@@ -44,7 +47,7 @@ tab_bar_margin_height 6.0 0.0
 tab_bar_margin_width 4.0
 tab_separator " "
 tab_title_template "  {title} "
-active_tab_title_template "{fmt.bold}  {title} {fmt.nobold}"
+active_tab_title_template "{fmt.italic}  {title} {fmt.noitalic}"
 tab_bar_background none
 active_tab_font_style = italic
 inactive_tab_font_style = italic
