--- a/config/kitty/kitty.conf
+++ b/config/kitty/kitty.conf
@@ -20,8 +20,8 @@ include ./catppuccin.conf
 # No license for bold and italic yet
 font_family PragmataPro Mono Liga
 bold_font PragmataPro Mono Liga Bold
-italic_font PragmataPro Mono Liga Italic
-bold_italic_font PragmataPro Mono Liga Bold Italic
+# italic_font PragmataPro Mono Liga Italic
+# bold_italic_font PragmataPro Mono Liga Bold Italic
 font_size 10
 
 # Slightly adjusted line height to improve glyp/icon for some fonts
