--- a/config/kitty/kitty.conf
+++ b/config/kitty/kitty.conf
@@ -47,7 +47,7 @@ tab_bar_margin_height 6.0 0.0
 tab_bar_margin_width 4.0
 tab_separator " "
 tab_title_template "  {title} "
-active_tab_title_template "{fmt.italic}  {title} {fmt.noitalic}"
+active_tab_title_template "{fmt.bold}  {title} {fmt.nobold}"
 tab_bar_background none
 active_tab_font_style = italic
 inactive_tab_font_style = italic
