--- a/config/kitty/kitty.conf
+++ b/config/kitty/kitty.conf
@@ -37,7 +37,7 @@ window_padding_width 10 12
 window_border_width 2px
 
 active_border_color #F8BD96
-inactive_border_color #C3BAC6
+inactive_border_color #F8BD96
 
 background_opacity 0.98
 dynamic_background_opacity yes
